[package]
name = "hydra-check-action-rs"
description = "Check Hydra CI status"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[dependencies]
log = "0.4.21"
reqwest = "0.12.4"
simple_logger = "5.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
